Add some classes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 
 <body>
     <h1>hello world !</h1>
+    <h2 id="Subtitle">Soy ari</h2>
 
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam iste nisi, cum molestias maiores expedita? Harum facere, quos inventore accusamus velit necessitatibus quas numquam a impedit ipsam nulla ex.</p>
+    <p class="body-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam iste nisi, cum molestias maiores expedita? Harum facere, quos inventore accusamus velit necessitatibus quas numquam a impedit ipsam nulla ex.</p>
+    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati consectetur excepturi facere, quasi voluptatem porro veritatis ad distinctio ducimus eum voluptas at rem, numquam esse, odio velit perferendis unde repellat.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A voluptatum impedit corrupti laboriosam deleniti numquam nulla placeat error commodi in? Quasi, quam. Aliquid accusantium quas reprehenderit ipsam doloribus id natus.</p>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, minus repudiandae quo nisi unde fugit obcaecati dolorem, sapiente exercitationem repellendus necessitatibus deserunt dolor natus veritatis porro sequi saepe! Aspernatur, reiciendis.</p>
 </body>
 </html>
